--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,22 @@
 /* mcbc-react\src\styles\global.css */
-/* import tailwind css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /* import google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* import antd css */
-@import 'antd/dist/antd.css';
+/* @import 'antd/dist/antd.css'; */
+
+/* import tailwind css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* global styles */
 html,
 body,
 #root {
-  @apply w-full h-full m-0 p-0 bg-slate-700;
+  @apply w-full h-full m-0 p-0 bg-slate-500;
 }
 
 .app-container {
