--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,13 +16,10 @@
 html,
 body,
 #root {
-  @apply w-full h-full m-0 p-0 bg-slate-500;
+  @apply min-w-full min-h-svh m-0 p-0 flex flex-col bg-slate-500;
 }
 
-.app-container {
-  @apply min-h-svh flex flex-col;
-}
-
-.content-container {
-  @apply flex-grow;
+:root {
+  --header-height: 4rem;
+  --footer-height: 3rem;
 }
