--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -12,5 +12,5 @@
 }
 
 .message-container {
-  @apply w-full lg:w-2/3 border-4 border-custom-blue rounded-3xl mx-4 p-4 mt-4;
+  @apply w-full lg:w-2/3 border-4 border-custom-blue rounded-3xl mx-4 p-4 lg:mt-20;
 }
